Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17545

Predicate lock for SPATIAL INDEX should lock non-matching record

    XMLWordPrintable

Details

    Description

      Bug 27577612 - CONCURRENT SERIALIZABLE TRANSACTIONS CAN INSERT INTO AN AREA SELECTED FOR UPDATE fixes an ACID bug for SPATIAL INDEX.

      Their test case passes also without the fix present, presumably because a locking conflict will exist also on the clustered index. So, we cannot add their test case.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5h
                  0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.